--- a/Letter/View/Menu.storyboard
+++ b/Letter/View/Menu.storyboard
@@ -22,7 +22,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iDo-Pk-Zcy">
-                                <rect key="frame" x="112.5" y="457" width="150" height="150"/>
+                                <rect key="frame" x="112.5" y="456.5" width="150" height="150.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="iDo-Pk-Zcy" secondAttribute="height" multiplier="1:1" id="8f0-qE-50M"/>
                                 </constraints>
@@ -56,18 +56,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pdJ-tf-Wej">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="pdJ-tf-Wej">
                                 <rect key="frame" x="0.0" y="20" width="375" height="647"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dat-27-C6G">
                                     <size key="itemSize" width="144" height="140"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="12" minY="20" maxX="12" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="25" minY="40" maxX="25" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="menuCell" id="k8e-N2-el2" customClass="MenuCollectionViewCell" customModule="Letter" customModuleProvider="target">
-                                        <rect key="frame" x="12" y="20" width="144" height="140"/>
+                                        <rect key="frame" x="25" y="40" width="144" height="140"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="144" height="140"/>
@@ -79,8 +79,8 @@
                                                         <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CgO-y7-Wob">
                                                             <rect key="frame" x="3.5" y="3.5" width="137" height="133"/>
                                                         </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="HJR-BQ-J1B">
-                                                            <rect key="frame" x="49.5" y="115" width="45.5" height="21"/>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="HJR-BQ-J1B">
+                                                            <rect key="frame" x="0.0" y="115" width="144" height="21"/>
                                                             <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                                             <nil key="textColor"/>
                                                             <nil key="highlightedColor"/>
@@ -88,10 +88,12 @@
                                                     </subviews>
                                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <constraints>
+                                                        <constraint firstItem="HJR-BQ-J1B" firstAttribute="leading" secondItem="IQ6-qR-5MR" secondAttribute="leading" id="4Pg-V6-agG"/>
                                                         <constraint firstAttribute="bottom" secondItem="HJR-BQ-J1B" secondAttribute="bottom" constant="4" id="8mG-Q2-9r9"/>
                                                         <constraint firstItem="CgO-y7-Wob" firstAttribute="width" secondItem="IQ6-qR-5MR" secondAttribute="width" multiplier="0.95" id="Cs2-EX-6d9"/>
                                                         <constraint firstItem="CgO-y7-Wob" firstAttribute="centerX" secondItem="IQ6-qR-5MR" secondAttribute="centerX" id="D98-0s-JdS"/>
                                                         <constraint firstItem="HJR-BQ-J1B" firstAttribute="height" secondItem="IQ6-qR-5MR" secondAttribute="height" multiplier="0.15" id="Fvm-MG-68q"/>
+                                                        <constraint firstAttribute="trailing" secondItem="HJR-BQ-J1B" secondAttribute="trailing" id="NSj-3k-tA0"/>
                                                         <constraint firstItem="CgO-y7-Wob" firstAttribute="height" secondItem="IQ6-qR-5MR" secondAttribute="height" multiplier="0.95" id="SLO-8y-DOZ"/>
                                                         <constraint firstItem="CgO-y7-Wob" firstAttribute="centerY" secondItem="IQ6-qR-5MR" secondAttribute="centerY" id="jIs-ay-uhA"/>
                                                         <constraint firstItem="HJR-BQ-J1B" firstAttribute="centerX" secondItem="IQ6-qR-5MR" secondAttribute="centerX" id="zpR-vp-Zr7"/>
@@ -117,7 +119,7 @@
                                     <outlet property="delegate" destination="Hj0-Hy-B7K" id="O0U-Hz-iGg"/>
                                 </connections>
                             </collectionView>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZeH-rO-Enk">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZeH-rO-Enk" customClass="RoundView" customModule="Letter" customModuleProvider="target">
                                 <rect key="frame" x="320" y="20" width="35" height="35"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8CC-M4-kfZ">
@@ -140,6 +142,11 @@
                                     <constraint firstItem="8CC-M4-kfZ" firstAttribute="centerX" secondItem="ZeH-rO-Enk" secondAttribute="centerX" id="qCv-1Y-gJe"/>
                                     <constraint firstItem="8CC-M4-kfZ" firstAttribute="height" secondItem="ZeH-rO-Enk" secondAttribute="height" id="ya8-Hv-nW8"/>
                                 </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="radius">
+                                        <real key="value" value="17.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
                         <color key="backgroundColor" name="blue"/>
@@ -154,7 +161,6 @@
                         <viewLayoutGuide key="safeArea" id="BVv-lP-BES"/>
                     </view>
                     <connections>
-                        <outlet property="closeView" destination="ZeH-rO-Enk" id="wSJ-Dt-XVM"/>
                         <segue destination="Ug1-GC-RAx" kind="show" identifier="goToGameSegue" id="ikW-0b-tHp"/>
                     </connections>
                 </viewController>
