--- a/Letter/View/Base.lproj/Main.storyboard
+++ b/Letter/View/Base.lproj/Main.storyboard
@@ -6,6 +6,9 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,16 +16,56 @@
         <scene sceneID="tXr-a1-R10">
             <objects>
                 <viewController id="BV1-FR-VrT" customClass="ViewController" customModule="Letter" customModuleProvider="target" sceneMemberID="viewController">
-                    <arscnView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="BrB-h1-WRS">
+                    <view key="view" contentMode="scaleToFill" id="75s-T9-MXf">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                    </arscnView>
+                        <subviews>
+                            <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0JI-04-0ez">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </arscnView>
+                            <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iT9-bK-d96">
+                                <rect key="frame" x="0.0" y="600" width="375" height="66.5"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Jiq-kb-0YL">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="66.5"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                </view>
+                                <blurEffect style="light"/>
+                            </visualEffectView>
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="AQE-f4-SyQ">
+                                <rect key="frame" x="0.0" y="600.5" width="375" height="66.5"/>
+                                <color key="backgroundColor" name="green"/>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="iT9-bK-d96" firstAttribute="height" secondItem="AQE-f4-SyQ" secondAttribute="height" id="38I-wH-wTE"/>
+                            <constraint firstItem="0JI-04-0ez" firstAttribute="top" secondItem="75s-T9-MXf" secondAttribute="top" id="4hu-sm-JQ8"/>
+                            <constraint firstItem="0JI-04-0ez" firstAttribute="trailing" secondItem="wah-ed-7xa" secondAttribute="trailing" id="JnQ-HM-Qte"/>
+                            <constraint firstItem="AQE-f4-SyQ" firstAttribute="height" secondItem="0JI-04-0ez" secondAttribute="height" multiplier="0.1" id="Lqp-OH-mkj"/>
+                            <constraint firstItem="AQE-f4-SyQ" firstAttribute="trailing" secondItem="wah-ed-7xa" secondAttribute="trailing" id="aHP-3L-le6"/>
+                            <constraint firstItem="AQE-f4-SyQ" firstAttribute="leading" secondItem="wah-ed-7xa" secondAttribute="leading" id="bGm-zO-z5Z"/>
+                            <constraint firstItem="0JI-04-0ez" firstAttribute="leading" secondItem="wah-ed-7xa" secondAttribute="leading" id="cZo-Ky-CK5"/>
+                            <constraint firstItem="iT9-bK-d96" firstAttribute="width" secondItem="AQE-f4-SyQ" secondAttribute="width" id="iay-Yb-OAf"/>
+                            <constraint firstItem="AQE-f4-SyQ" firstAttribute="bottom" secondItem="wah-ed-7xa" secondAttribute="bottom" id="lws-qQ-mAs"/>
+                            <constraint firstItem="iT9-bK-d96" firstAttribute="centerY" secondItem="AQE-f4-SyQ" secondAttribute="centerY" id="mDe-Sn-SqQ"/>
+                            <constraint firstItem="0JI-04-0ez" firstAttribute="bottom" secondItem="wah-ed-7xa" secondAttribute="bottom" id="nrN-Na-DS2"/>
+                            <constraint firstItem="iT9-bK-d96" firstAttribute="centerX" secondItem="AQE-f4-SyQ" secondAttribute="centerX" id="yFi-Ss-WGJ"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="wah-ed-7xa"/>
+                    </view>
                     <connections>
-                        <outlet property="sceneView" destination="BrB-h1-WRS" id="5nT-qQ-ynl"/>
+                        <outlet property="sceneView" destination="0JI-04-0ez" id="8cG-AE-KC1"/>
+                        <outlet property="stackView" destination="AQE-f4-SyQ" id="ayS-Le-RJm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="32.833583208395808"/>
         </scene>
     </scenes>
+    <resources>
+        <namedColor name="green">
+            <color red="0.25499999523162842" green="0.83899998664855957" blue="0.27099999785423279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+    </resources>
 </document>
