--- a/Letter/View/Base.lproj/Main.storyboard
+++ b/Letter/View/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -23,6 +24,35 @@
                             <arscnView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0JI-04-0ez">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </arscnView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XCo-Mw-m00" customClass="RoundView" customModule="Letter" customModuleProvider="target">
+                                <rect key="frame" x="320" y="20" width="35" height="35"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bZO-kH-bjm">
+                                        <rect key="frame" x="0.0" y="0.0" width="35" height="35"/>
+                                        <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="30"/>
+                                        <state key="normal" title="X">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="backButton:" destination="BV1-FR-VrT" eventType="touchUpInside" id="wQZ-cr-Gjr"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" name="red"/>
+                                <constraints>
+                                    <constraint firstItem="bZO-kH-bjm" firstAttribute="height" secondItem="XCo-Mw-m00" secondAttribute="height" id="Aih-6M-GER"/>
+                                    <constraint firstAttribute="width" secondItem="XCo-Mw-m00" secondAttribute="height" multiplier="1:1" id="E9I-UN-1p0"/>
+                                    <constraint firstItem="bZO-kH-bjm" firstAttribute="centerX" secondItem="XCo-Mw-m00" secondAttribute="centerX" id="JZ5-kg-r2c"/>
+                                    <constraint firstItem="bZO-kH-bjm" firstAttribute="centerY" secondItem="XCo-Mw-m00" secondAttribute="centerY" id="NG5-mj-mYS"/>
+                                    <constraint firstAttribute="width" constant="35" id="VQL-oO-myK"/>
+                                    <constraint firstItem="bZO-kH-bjm" firstAttribute="width" secondItem="XCo-Mw-m00" secondAttribute="width" id="haM-G3-ePD"/>
+                                </constraints>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="radius">
+                                        <real key="value" value="17.5"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </view>
                             <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iT9-bK-d96">
                                 <rect key="frame" x="0.0" y="600" width="375" height="66.5"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="Jiq-kb-0YL">
@@ -38,8 +68,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="XCo-Mw-m00" firstAttribute="top" secondItem="75s-T9-MXf" secondAttribute="top" constant="20" id="0IB-XO-Mee"/>
                             <constraint firstItem="iT9-bK-d96" firstAttribute="height" secondItem="AQE-f4-SyQ" secondAttribute="height" id="38I-wH-wTE"/>
                             <constraint firstItem="0JI-04-0ez" firstAttribute="top" secondItem="75s-T9-MXf" secondAttribute="top" id="4hu-sm-JQ8"/>
+                            <constraint firstItem="XCo-Mw-m00" firstAttribute="width" secondItem="XCo-Mw-m00" secondAttribute="height" multiplier="1:1" id="6M0-R2-xhM"/>
                             <constraint firstItem="0JI-04-0ez" firstAttribute="trailing" secondItem="wah-ed-7xa" secondAttribute="trailing" id="JnQ-HM-Qte"/>
                             <constraint firstItem="AQE-f4-SyQ" firstAttribute="height" secondItem="0JI-04-0ez" secondAttribute="height" multiplier="0.1" id="Lqp-OH-mkj"/>
                             <constraint firstItem="AQE-f4-SyQ" firstAttribute="trailing" secondItem="wah-ed-7xa" secondAttribute="trailing" id="aHP-3L-le6"/>
@@ -50,10 +82,12 @@
                             <constraint firstItem="iT9-bK-d96" firstAttribute="centerY" secondItem="AQE-f4-SyQ" secondAttribute="centerY" id="mDe-Sn-SqQ"/>
                             <constraint firstItem="0JI-04-0ez" firstAttribute="bottom" secondItem="wah-ed-7xa" secondAttribute="bottom" id="nrN-Na-DS2"/>
                             <constraint firstItem="iT9-bK-d96" firstAttribute="centerX" secondItem="AQE-f4-SyQ" secondAttribute="centerX" id="yFi-Ss-WGJ"/>
+                            <constraint firstItem="wah-ed-7xa" firstAttribute="trailing" secondItem="XCo-Mw-m00" secondAttribute="trailing" constant="20" id="zXI-1R-JXV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="wah-ed-7xa"/>
                     </view>
                     <connections>
+                        <outlet property="fxView" destination="iT9-bK-d96" id="lBw-gr-6gn"/>
                         <outlet property="sceneView" destination="0JI-04-0ez" id="8cG-AE-KC1"/>
                         <outlet property="stackView" destination="AQE-f4-SyQ" id="ayS-Le-RJm"/>
                     </connections>
@@ -66,6 +100,9 @@
     <resources>
         <namedColor name="green">
             <color red="0.25499999523162842" green="0.83899998664855957" blue="0.27099999785423279" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="red">
+            <color red="0.83899998659999997" green="0.2549999952" blue="0.2549999952" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
