--- a/Letter/View/EndGame.storyboard
+++ b/Letter/View/EndGame.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -31,15 +32,19 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GRq-gQ-W6v">
                                                     <rect key="frame" x="5" y="20" width="252.5" height="35"/>
                                                     <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="30"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="BzK-P2-uPO">
                                                     <rect key="frame" x="39.5" y="87.5" width="183.5" height="175"/>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ily-eh-hDg">
-                                                    <rect key="frame" x="110.5" y="282.5" width="41" height="30"/>
-                                                    <state key="normal" title="Voltar"/>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ily-eh-hDg">
+                                                    <rect key="frame" x="106.5" y="282.5" width="50" height="39"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="50" id="8Sj-e1-3EH"/>
+                                                        <constraint firstAttribute="width" secondItem="ily-eh-hDg" secondAttribute="height" multiplier="9:7" id="XQi-f7-DNR"/>
+                                                    </constraints>
+                                                    <state key="normal" image="arrow"/>
                                                     <connections>
                                                         <action selector="backButton:" destination="sXe-SU-AI4" eventType="touchUpInside" id="ZId-NT-nYH"/>
                                                     </connections>
@@ -91,4 +96,7 @@
             <point key="canvasLocation" x="73" y="213"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="arrow" width="90" height="70"/>
+    </resources>
 </document>
